$Id$

NOTE: This is the 1.3.X development branch.  Put code changes right
below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - Patch 1792796: Debian fix for vulnerability CVE-2006-6669
   Fixes cross-site scripting (XSS) vulnerability in export_handler.php.
 - Security fix: vulnerability in $includeDir in functions.php
   Renamed getPredefinedVariables.php to formvars.php
 - Patch 1719114: Allow leading/trailing space in header/trailer file name
 - Added Indonesian translation
 - Bug fix: icalclient.php was not working with Thunderbird/Lightning
 - FIxed bug [ 1780025 ] moonphase: Notice: Undefined index: 20070731 in functions.php
 - MySqli can now create database during installation 
 - Remove '+' icon from month.php, week.php, day.php.
   Users can now double-click on a date to add a new event.
 - Added CDATA block around JS in view_r.php
 - Applied PATCH [ 1203702 ] Sys-Admin Guide fails to mention LDAP support in PHP
 - Updated list of supported languages in SysAdmin.html
 - Per PATCH [ 1622050 ] fixed somy messages
   I've started to combine some phrases together for easier translation.
   Including moving the punctuation from the code and into the phrase.
 - Update the URL to the WebCalendar wiki
 - Fixed bug [ 1748124 ] reminder email has wrong date
 - Fixed bug [ 1766614 ] 'weekstart' at edit_entry is wrong

Version 1.1.3 (4 Aug 2007)
 - Fixed bug: when upgrading from 1.0.5 to 1.1.X, a bad cookie session can
   cause PHP to crash on some systems.
 - If settings.php is size 0, then redirect to install page (because install
   was started but not completed).
 - Fixed bug [ 1744648 ] Theme changing over system settings
 - Fixed bug: error in SQLite creation SQL
 - Fixed bug [ 1738333 ] Events without reminder
 - Fixed bug [ 1737128 ] From notification to "not authorized"
 - Fixed bug [ 1766291 ] mini-calender pop-up will not be displayed correctly
 - Fixed bug [ 1754622 ] every 'normal' entry will be displayed as 'Priority: 2-High'